--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
 
     <script src="js/typed.min.js"></script>
     
+    <link href="https://fonts.googleapis.com/css?family=Work+Sans:400,500,700" rel="stylesheet">
+
+    
 </head>
 <body>
 
